Wed Feb 24 16:29:51 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3826_Regression/svc.conf:
        * tests/Bug_3826_Regression/run_test.pl:
        * tao/TAO_Internal.cpp:
          Extended the fix for bug#3826 and adjusted the test. Initial fix
          was not complete. If there is a svc.conf which is processed by
          ACE unconditionally then it's processed in a global gestalt even
          if -ORBGestalt LOCAL is provided. Current change must fix this
          behaviour.

Tue Feb 23 18:55:21 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added Bug_3812_Regression as not fixed test.

        * tests/Bug_3812_Regression/Bug_3812_Regression.cpp:
        * tests/Bug_3812_Regression/mock_transport.h:

          Fixed fuzz errors.

Tue Feb 23 10:35:39 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/TAO_Internal.cpp:
          Changed a code layout for return values in forward declarations
          according to TAO code conventions. Thanks to Johnny Willemsen
          <jwillemsen at remedy dot nl> for pointing this out.

Tue Feb 23 09:46:57 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3827_Regression/test.cpp:
        * tests/Bug_3827_Regression/Message.idl:
        * tests/Bug_3827_Regression/run_test.pl:
        * tests/Bug_3827_Regression/README:
        * tests/Bug_3827_Regression/Bug_3827_Regression.mpc:
        * tao/ORB_Core.cpp:
        * tao/ORB.cpp:
        * tao/ORB_Core.h:
          Added a test for bug#3827 and fixed it. Now access or changes to
          valuetype_adapter_ in ORB_Core is protected by a lock.

        * tests/Bug_3826_Regression/orb_svc.conf:
        * tests/Bug_3826_Regression/server.cpp:
        * tests/Bug_3826_Regression/README:
        * tests/Bug_3826_Regression/Bug_3826_Regression.mpc:
        * tests/Bug_3826_Regression/run_test.pl:
        * tao/TAO_Internal.cpp: